--- a/ie_test.html
+++ b/ie_test.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>ie test</title>
+    <style>
+      #btn {
+        margin: 0 auto;
+        width: 200px;
+        padding: 7px;
+        color: #fff;
+        border-radius: 5px;
+        background: #00aaff;
+        box-shadow: 0 4px 0 #0088cc;
+        cursor: pointer;
+      }
+      #btn:hover {
+        opacity: 0.8;
+      }
+    </style>
   </head>
   <body>
 
