amend link-to-ie-search.html

--- a/link-to-ie-serch.html
+++ b/link-to-ie-serch.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div>
-    <input type="button" value="検索" onclick="search()">
+    <input type="button" value="検索" onclick="search();">
   </div>
   <script>
     // 設定
